syntax = "proto3";

service DreamPaint {
    rpc GetCanvas (CanvasRequest) returns (CanvasResponse) {}
    rpc Paint (PaintRequest) returns (PaintResponse) {}
}

message Position {
    required int32 x = 1;
    required int32 y = 2;
}

//
message PaintRequest {
    required Position pos = 1;
    required uint32 size = 2;
    required uint32 color = 3;
}

message PaintResponse {
    required uint32 timestamp = 1;
}

// Broadcasted to all but paint requester.
message PaintEvent {
    required Position pos = 1;
    required uint32 size = 2;
    required uint32 color = 3;
    required uint32 timestamp = 4;
}

message StatusEvent {
    required uint32 users = 1;
}

// Se
message CanvasRequest {
    required Position offset = 1;
    required uint32 width = 2;
    required uint32 height = 3;
}

// Canvas response containing JPEG encoded data of requested region.
message CanvasResponse {
    required uint32 timestamp = 1; // containing paint up to this
    required bytes image = 2;
}

// Broadcasted by server when new canvas is available.
message CanvasEvent {
    required uint32 timestamp = 1;
}
